# sudoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
inc/: board.hpp  game.hpp  generator.hpp  tile.hpp  window.hpp
includes/: board.h  game.h  memory.h
src/: board.cpp  game.cpp  generator.cpp  main.c  main.cpp  memory.c  tile.cpp  window.cpp
src/game/: game.c
